pillar-web/src/styles/plugins/_jstree.sass
/* jsTree overrides */

$tree-color-text: white
$tree-color-highlight: white

.jstree-default
	font-weight: 400

.jstree-loading
	padding: 0 0 0 5px

.jstree-default li.jstree-loading .jstree-icon
	// left: 3px
	// background:
	// 	image: url('/static/assets/img/loading_16.gif') !important
	// 	// image: url('http://www.kperformer.com/images/loading-contact.gif') !important
	// 	position: center center
	// 	repeat: no-repeat
	// 	size: 12px 12px

	/* Remove icon */
	// &:before
	// 	content: ''

.jstree-default-responsive .jstree-anchor
	+media-sm
		font-weight: normal !important
		text-shadow: none !important

.jstree-default .jstree-node
	max-width: 100% // Needed for ellipsis on long names
	margin: 0 0 0 5px !important
	font-weight: 400 !important
	padding: 2px 0
	color: rgba($tree-color-text, .9)
	min-height: 12px !important
	line-height: 12px !important
	+media-xs
		width: 100%

.ps-active-y
	.jstree-default .jstree-node
		max-width: 96%

.jstree-default .jstree-leaf
	padding-left: 3px

.jstree-default .jstree-node.jstree-open,
.jstree-default .jstree-node.jstree-leaf
	border-left: thin solid $color-text /* Whatever after the top level */

.jstree-default .jstree-node.jstree-closed
	border-left: thin solid lighten($color-text, 10%) /* Closed Folder */

// .jstree-default .jstree-children .jstree-leaf
// 	border-left: thin solid $tree-color-highlight

.jstree-default .jstree-node.jstree-closed .jstree-icon.jstree-ocl,
.jstree-default .jstree-node.jstree-open .jstree-icon.jstree-ocl
	position: absolute
	z-index: 1
	opacity: 0
	min-width: 30px
	float: left

.jstree-default .jstree-ocl:before
	+media-xs
		font-weight: bold
		font-size: 100%
		top: 10%
		left: 46%

// .jstree-node.jstree-open, .jstree-node.jstree-closed

.jstree-anchor
	+media-xs
		width: 98%
		padding: 0 !important

.jstree-default .jstree-node.jstree-closed .jstree-icon.jstree-ocl + .jstree-anchor,
.jstree-default .jstree-node.jstree-open .jstree-icon.jstree-ocl + .jstree-anchor
	margin-left: 8px !important

.jstree-default .jstree-node.jstree-leaf .jstree-icon.jstree-ocl + .jstree-anchor
	margin-left: 5px !important

.jstree .jstree-open > .jstree-children
	padding-top: 2px

.jstree-default .jstree-anchor  /* The text of the last level item */
	width: 100%
	padding: 0 10px 0 20px !important
	height: inherit !important
	overflow: hidden
	white-space: nowrap
	text-overflow: ellipsis
	overflow: hidden
	border-bottom: thin solid transparent
	transition: none

.jstree-default li
	transition: none

/* expanded item, like a folder */
.jstree-default .jstree-open > .jstree-ocl,
.jstree-default .jstree-open > .jstree-anchor,
.jstree-default .jstree-open > .jstree-ocl .jstree-icon.jstree-themeicon,
.jstree-default .jstree-open > .jstree-anchor .jstree-icon.jstree-themeicon
	color: $tree-color-text !important

/* active item text */
.jstree-default .jstree-clicked,
.jstree-default .jstree-clicked > .jstree-ocl
	background-color: transparent !important
	border-bottom: thin solid transparent
	border-radius: 0
	box-shadow: none
	margin-left: -5px !important

.jstree-default .jstree-leaf .jstree-clicked
	width: 100% !important

/* hovered text */
.jstree-default .jstree-hovered,
.jstree-default .jstree-open .jstree-hovered,
.jstree-default .jstree-hovered .jstree-icon.jstree-themeicon
	color: $tree-color-highlight !important


/* active item text + icon */
.jstree-default .jstree-clicked,
.jstree-default .jstree-clicked > .jstree-ocl,
.jstree-default .jstree-clicked .jstree-icon.jstree-themeicon
	color: $tree-color-highlight !important

.jstree-default li[aria-selected='true']
	background-color: rgba($color-background, .2)

	a.jstree-anchor
		&:after
			content: '\f105'
			font-family: 'FontAwesome'
			color: $tree-color-highlight
			position: absolute
			right: 8px

	li
		a.jstree-anchor
				&:after
					content: ''

.jstree-default li[aria-expanded='true']
	background-color: transparent


/* hover an active item */
.jstree-default .jstree-clicked.jstree-hovered,
.jstree-default .jstree-clicked.jstree-hovered .jstree-icon.jstree-themeicon
	color: lighten($tree-color-highlight, 5%) !important
	box-shadow: none

.jstree-anchor > .jstree-themeicon
	margin-right: 10px !important
	margin-left: 20px !important

// Special case to make picture icons smaller
i.jstree-icon.jstree-themeicon.fa.fa-picture-o
	font-size: .85em !important

.jstree-default .jstree-hovered,
.jstree-default .jstree-hovered .jstree-ocl
	background-color: transparent !important
	box-shadow: none

.jstree-default .jstree-hovered
	box-shadow: none

.jstree-default .jstree-node,
.jstree-default .jstree-icon
	background-image: none !important
	position: relative

.jstree-default .jstree-icon  /* Folder that you click to collapse/expand */
	width: 20px !important
	//width: 100% !important
	text-align: left !important
	background-color: transparent !important
	position: absolute
	left: 8px

i.jstree-icon.jstree-ocl
	height: 24px !important
	color: rgba($tree-color-text, .5) !important
	+media-xs
		height: 40px !important

.jstree-default .jstree-icon:empty
	line-height: 24px

.jstree-children .jstree-open i.jstree-icon.jstree-ocl
	height: 28px !important

.jstree-anchor > .jstree-themeicon
	margin-right: 3px !important
	margin-left: 0 !important
	color: rgba($tree-color-text, .7) !important
	font-size: 95% !important

.jstree-open > .jstree-anchor > .jstree-themeicon
	color: $color-primary !important

.jstree-leaf > .jstree-clicked > .jstree-themeicon
	color: $color-secondary !important

.jstree-leaf .jstree-icon  /* Icon of the files (not nodes) */
	opacity: 0
	width: 0px !important

.jstree-leaf .jstree-icon.jstree-themeicon
	opacity: 1
	width: 24px !important
	color: lighten($color-text, 30%) !important

/* /jsTree overrides */

